# jupyterlab-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_getting_started.ipynb  02_new_notebook.ipynb  welcome.ipynb
