[project]
name = "jupyterlab-project"
version = "0.1.0"
description = "JupyterLab project for data analysis and experimentation"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]